--- a/src/template.html
+++ b/src/template.html
@@ -64,7 +64,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image">
               <img
-                class="img-fluid rounded shadow-lg"
+                class="img-fluid rounded roundIMG shadow-lg"
                 height="auto"
                 width="300px"
                 src="./assets/profile.jpg"
@@ -225,7 +225,7 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:udinapoli@ablsoft.it"
+            href="mailto:dn.umberto@gmail.com"
             >My mail</a
           >
         </div>
