Added some customization

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
     <!-- Put here your site title -->
     <title>Umberto Di Napoli | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="khelthos, umberto, full-stack, developer, javascript, react, gatsby" />
+    <meta name="keywords" content="khelthos, umberto, full-stack, full stack, developer, javascript, react, gatsby" />
     <!-- Improve your SEO by adding a small descrption of you -->
     <meta name="description" content="Umberto Di Napoli | Developer" />
 
@@ -43,9 +43,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Umberto Di Napoli</span>
+          Hi, my name is <span class="text-color-main">Umberto</span>
           <br />
-          I'm a Full-stack Developer.
+          I'm a Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">About me</a>
@@ -64,7 +64,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image">
               <img
-                class="img-fluid rounded roundIMG shadow-lg"
+                class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
                 src="./assets/profile.jpg"
@@ -110,20 +110,20 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Coming Soon</h3>
+                <h3 class="project-wrapper__text-title">Monsterfriends</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    My first web application developed with React, 
+                    to study the efficiency of state management and Redux.
+                    Leveraging public APIs, a list of users is initialized 
+                    and avatars are dynamically displayed and it is possible 
+                    to perform a search that applies a filter to the user list.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://khelthos.github.io/monsterfriends/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Khelthos/monsterfriends">
                   Source Code
                 </a>
               </div>
@@ -132,7 +132,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/monsterfriends.jpg" />
                   </div>
                 </a>
               </div>
@@ -212,6 +212,51 @@
     </section>
     <!-- /END Projects Section -->
 
+    <!-- **** Blog Section **** -->
+    <section id="blog">
+      <div class="container">
+        <h2 class="section-title">
+          Blog
+        </h2>
+        <div class="card-deck row justify-content-center">
+          <div class="card card-bg mb-3" style="max-width: 30rem;">
+            <img class="card-img-top" src="./assets/img_avatar.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Post Title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-info">Learn more</a>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2020/07/30 10:00</small>
+            </div>
+          </div>
+          <div class="card card-bg mb-3" style="max-width: 30rem;">
+            <img class="card-img-top" src="./assets/img_avatar.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Post Title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-info">Learn more</a>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2020/07/28 15:00</small>
+            </div>
+          </div>
+          <div class="card card-bg mb-3" style="max-width: 30rem;">
+            <img class="card-img-top" src="./assets/img_avatar.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h4 class="card-title">Post Title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-info">Learn more</a>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2020/07/27 09:00</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /END Blog Section -->
+
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
@@ -224,7 +269,7 @@
           </p>
           <a
             target="_blank"
-            class="cta-btn cta-btn--resume"
+            class="cta-btn cta-btn--hero"
             href="mailto:dn.umberto@gmail.com"
             >My mail</a
           >
@@ -258,7 +303,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+         Umberto Di Napoli © 2020
           </a>
         </p>
       </div>
