Hide template blog section

--- a/src/template.html
+++ b/src/template.html
@@ -219,7 +219,8 @@
           Blog
         </h2>
         <div class="card-deck row justify-content-center">
-          <div class="card card-bg mb-3" style="max-width: 30rem;">
+          <span class="loader"></span>
+          <!-- <div class="card card-bg mb-3" style="max-width: 30rem;">
             <img class="card-img-top" src="./assets/img_avatar.jpg" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">Post Title</h4>
@@ -251,7 +252,7 @@
             <div class="card-footer">
               <small class="text-muted">2020/07/27 09:00</small>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
