--- a/src/template.html
+++ b/src/template.html
@@ -75,16 +75,21 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
-              </p>
-              <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                Ever since I was young, I've had a passion to understand 
+                how things works and growing up I started developing video 
+                game mods and managing unofficial game servers.<br /><br />
+                Over time I started studying programming languages at school,
+                on manuals and learning from my more experienced colleagues 
+                on my first job.
+              </p><br />
+              <p class="about-wrapper__info-text">I started working as a technician, 
+                developing .NET applications for PDAs and smartphones, I was also a 
+                Java teacher for a short time.<br /><br />
+                Now I'm a seasoned Software Developer with almost 11 consecutive 
+                years' experience in the Information Technology. I'm passionate 
+                about making the most efficient software for my clients, I've always 
+                worked to the best of my ability and I'm continuing to increase my 
+                knowledge in the field of web development.
               </p>
               <span class="d-flex mt-3">
                 <a id="resume_download" target="_blank" class="cta-btn cta-btn--resume" href="#!">
