--- a/src/template.html
+++ b/src/template.html
@@ -149,20 +149,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Coming Soon</h3>
+                <h3 class="project-wrapper__text-title">Face Recognition</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This React application, was my routing experiment and the first 
+                    to integrate a DB for saving information. The user can register, 
+                    the password will be saved encrypted and then he can enter an image 
+                    address that through the Clarifai API will be highlighted the face shown.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://umberto-smart-brain.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Khelthos/smart-brain">
                   Source Code
                 </a>
               </div>
@@ -171,7 +170,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/smartbrain_pic.jpg" />
                   </div>
                 </a>
               </div>
